Implemented auto-scaling features and fixed AppCloudlet